--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,14 @@ code {
                  monospace;
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 body {
     background: #2c3e50;
 }
